fixed lenses issue on safari

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,4 +27,5 @@ body{
   display: flex;
   flex-flow: column;
   justify-content: space-between;
+  -webkit-justify-content: space-between;
 }
