--- a/src/style/components/_main.scss
+++ b/src/style/components/_main.scss
@@ -35,6 +35,7 @@
   .glasses-cont{
     opacity: 0;
     transform: translateY(-20%);
+    // overflow: hidden;
     position: relative;
     width: 100%;
 
@@ -65,6 +66,7 @@
       justify-content: center;
       gap: min(8.8vw, 5.8rem);
       .lense{
+        overflow: hidden;
         height: 100%;
         aspect-ratio: 1/1;
         clip-path: circle(50%);
